--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: zjx001202@gmail.com
 description: Scala 3 中文站点
 # baseurl: "" # the subpath of your site, e.g. /blog
 # url: "" # the base hostname & protocol for your site, e.g. http://example.com
-logo: "/favicon.ico"
+# logo: "/favicon.ico"
 lang: zh-CN
 
 # heading_anchors: true
