--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,10 @@ search_enabled: false
 aux_links:
   "官方网站":
     - "https://dotty.epfl.ch/"
-  "":
+  "改进翻译":
     - "https://github.com/Dotty-China/dotty-china.github.io"
+  "捐赠支持":
+    - "https://donate.glavo.site/"
 
 footer_content: "© 2009-2021 Aliyun.com 版权所有 "
 
