--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,10 @@ aux_links:
     - "https://github.com/Dotty-China/dotty-china.github.io"
   "捐赠支持":
     - "https://donate.glavo.site/"
+  "联系维护者":
+    - "https://glavo.site/about/"
+  "加入 QQ 群":
+    - "https://jq.qq.com/?_wv=1027&k=BCxI4ukn"
 
 footer_content: "© 2009-2021 Aliyun.com 版权所有"
 
