--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ aux_links:
   "GitHub 仓库":
     - "https://github.com/Dotty-China/dotty-china.github.io"
   "捐赠支持":
-    - "https://donate.glavo.site/"
+    - "/donate.html"
   "联系维护者":
     - "https://glavo.site/about/"
   "加入 QQ 群":
